Fix overflow issues.

--- a/themes/jain/assets/scss/global.scss
+++ b/themes/jain/assets/scss/global.scss
@@ -14,6 +14,7 @@ html {
     linear-gradient(to left, var(--theme-color) 0%, var(--theme-color) var(--header-height), transparent var(--header-height));
     opacity: 1 !important;
     overflow-x: hidden;
+    width: 100vw;
 }
 
 body {
@@ -28,10 +29,12 @@ body {
     flex-direction: column;
     flex: 1;
     width:100vw;
+    overflow-x:hidden;
     &>article, &>section {
         flex: 1;
         background: white;
     }
+    padding-top: var(--header-height);
 }
 
 h1, h2, h3, h4, h5, h6 {
